Remove html and css for testing a grid

--- a/etch.html
+++ b/etch.html
@@ -7,17 +7,7 @@
 <body>
     <div class="page">
  
-        <div class="sketch-box">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-        </div>
+        <div class="sketch-box"></div>
         
     </div>
 
