Add html and CSS for new game button

--- a/etch.html
+++ b/etch.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div class="page">
+
+        <button class="new-game-btn">New Grid</button>
  
         <div class="sketch-box"></div>
         
