Fix new-grid-btn classname

--- a/etch.html
+++ b/etch.html
@@ -7,7 +7,7 @@
 <body>
     <div class="page">
 
-        <button class="new-game-btn">New Grid</button>
+        <button class="new-grid-btn">New Grid</button>
  
         <div class="sketch-box"></div>
         
